Don't lock GDK around g_application_run()

An unintended interaction between GtkApplication and GDK threading made
this necessary before.  That code has since been simplified, breaking
this formerly-working code.

https://bugzilla.gnome.org/show_bug.cgi?id=662630